# SphereClient

./: .gitignore  CMakeLists.txt  README.md
lua/: _main.lua  appearance.lua  game_window.lua
scripts/: export_mbc_lua.py  inspect_terrain_scene.gd
src/client/: bitmap_font.cpp  bitmap_font.hpp  character_camera.hpp  character_render_mesh.hpp  client_runtime.cpp  client_runtime.hpp  d3d_character_scene.cpp  d3d_character_scene.hpp  d3d_game_world_scene.cpp  d3d_game_world_scene.hpp  dds_bitmap.cpp  dds_bitmap.hpp  lua_runtime.cpp  lua_runtime.hpp  main.cpp  network_client.cpp  network_client.hpp  ui_definition.cpp  ui_definition.hpp
src/common/: binary_reader.hpp  config.hpp
src/mbc/: mbc.cpp  mbc.hpp
src/model/: chr.cpp  chr.hpp  mdl.cpp  mdl.hpp  skl.cpp  skl.hpp
src/pe/: pe_imports.cpp  pe_imports.hpp
src/tools/: chr_dump.cpp  mbc_dump.cpp  mdl_dump.cpp  pe_imports_main.cpp  ui_dump.cpp
